--- a/themes/WebStack-Hugo/layouts/partials/sidebar.html
+++ b/themes/WebStack-Hugo/layouts/partials/sidebar.html
@@ -95,7 +95,7 @@
                                 {{ range .Site.Data.webstack }}
                                     {{ if .list }}
                                     <li class="sidebar-item">
-                                        <a href="#{{ range first 1 .list }}{{ md5 .term }}{{ end }}" class="smooth change-href" data-change="#{{ range first 1 .list }}{{ md5 .term }}{{ end }}">    
+                                        <a href="#{{ range first 1 .list }}{{ md5 .term }}{{ end }}" class="smooth change-href" data-change="#{{ range first 1 .list }}{{ md5 .term }}{{ end }}">
                                             <i class="{{ .icon }} icon-fw icon-lg mr-2"></i>
                                             <span>{{ .taxonomy }}</span>
                                             <i class="iconfont icon-arrow-r-m sidebar-more text-sm"></i>
@@ -105,7 +105,7 @@
                                             <li><a href="#{{ md5 .term }}" class="smooth"><span>{{ .term }}</span></a></li>
                                             {{ end }}
                                         </ul>
-                                    </li> 
+                                    </li>
                                     {{ else }}
                                     <li class="sidebar-item">
                                         <a href="#{{ md5 .taxonomy }}" class="smooth">
@@ -115,34 +115,37 @@
                                     </li>
                                     {{ end }}
                                 {{ end }}
-                            </ul>           
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="border-top py-2 border-color">
                     <div class="flex-bottom">
                         <ul>
-                            <li id="menu-item-237"
+                            <!-- <li id="menu-item-237"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-237 sidebar-item">
                                 <a href="{{ $.Site.Params.upload }}" target="_blank">
                                     <i class="fas fa-file-upload icon-fw icon-lg mr-2"></i>
                                     <span>网站提交</span></a>
-                            </li>
-
-			    <li id="menu-item-212"
+                            </li> -->
+<li>
+<!-- 代码参考，需要自行调整height和scale数值 -->
+<iframe frameborder=0 src="https://support.nodeget.com/page/promotion?id=224" style="border-radius:8px; height: 270px;transform: scale(1.0); transform-origin: top left;"></iframe>
+</li>
+			    <!-- <li id="menu-item-212"
                                  class="menu-item menu-item-type-custom menu-item-object-custom menu-item-212 sidebar-item">
                                  <a href="#friendlink" class="smooth">
                                      <i class="fab fa-staylinked icon-fw icon-lg mr-2"></i>
                                      <span>友情链接</span>
                                  </a>
-                            </li>
+                            </li> -->
 
-                            <li id="menu-item-213"
+                            <!-- <li id="menu-item-213"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-213 sidebar-item">
                                 <a target="_blank" rel="noopener" href="{{ $.Site.Params.about }}">
                                     <i class="fa fa-info-circle icon-fw icon-lg mr-2"></i>
                                     <span>关于导航</span></a>
-                            </li>
+                            </li> -->
                             <li id="menu-item-213" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-213 sidebar-item">
                                 <a target="_blank" rel="noopener" href="{{ $.Site.Params.repository }}">
                                     <i class="fa fa-github icon-fw icon-lg mr-2"></i>
