--- a/themes/WebStack-Hugo/layouts/partials/content_header.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_header.html
@@ -106,6 +106,10 @@
                             <a href="javascript:" id="sidebar-switch" data-toggle="modal" data-target="#sidebar"><i
                                     class="iconfont icon-classification icon-2x"></i></a>
                         </li>
+                        <li>
+<!-- 代码参考，需要自行调整height和scale数值 -->
+<iframe frameborder=0 src="https://support.nodeget.com/page/promotion?id=224" style="border-radius:8px; height: 270px;transform: scale(1.0); transform-origin: top left;"></iframe>
+</li>
                     </ul>
                 </div>
             </div>
