--- a/themes/WebStack-Hugo/layouts/partials/content_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_search.html
@@ -1,8 +1,5 @@
 <div class="header-big  post-top css-color mb-4" id="search-bg" style="">
-        <li>
-<!-- 代码参考，需要自行调整height和scale数值 -->
-<iframe frameborder=0 src="https://support.nodeget.com/page/promotion?id=224" style="border-radius:8px; height: 270px;transform: scale(1.0); transform-origin: top left;"></iframe>
-</li>
+
     <div class="s-search">
         <div id="search" class="s-search mx-auto">
             <div id="search-list-menu" class="hide-type-list">
@@ -196,6 +193,10 @@
                     onclick="$('#bulletin_box').slideUp('slow');"><i class="iconfont icon-close"
                         style="line-height:25px"></i></a>
             </div>
+             <div>
+<!-- 代码参考，需要自行调整height和scale数值 -->
+<iframe frameborder=0 src="https://support.nodeget.com/page/promotion?id=224" style="border-radius:8px; height: 270px;transform: scale(1.0); transform-origin: top left;"></iframe>
+</div>
         </div>
     </div>
 </div>
