--- a/themes/WebStack-Hugo/layouts/partials/sidebar.html
+++ b/themes/WebStack-Hugo/layouts/partials/sidebar.html
@@ -148,6 +148,11 @@
                                     <i class="fa fa-github icon-fw icon-lg mr-2"></i>
                                     <span>我的GitHub</span></a>
                             </li>
+
+                              <li>
+<!-- 代码参考，需要自行调整height和scale数值 -->
+<iframe frameborder=0 src="https://support.nodeget.com/page/promotion?id=224" style="border-radius:8px; height: 270px;width:150px;transform: scale(1.0); transform-origin: top left;"></iframe>
+</li>
                         </ul>
                     </div>
                 </div>
