--- a/themes/WebStack-Hugo/layouts/partials/content_header.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_header.html
@@ -51,8 +51,8 @@
                         {{ end }}
                     </div>
 
-                    <ul class="nav navbar-menu text-xs order-1 order-md-2">
-                        <!-- 天气系统 -->
+                    <!-- <ul class="nav navbar-menu text-xs order-1 order-md-2">
+
                         <div class="rounded-circle weather">
                             <div id="he-plugin-simple" style="display: contents;"></div>
                             <script>WIDGET = {
@@ -80,7 +80,7 @@
                             </script>
                             <script
                                 src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
-                        </div>
+                        </div> -->
                         <!-- 一言 -->
                         {{ with .Site.Params.yiyan }}
                         <li class="nav-item mr-3 mr-lg-0 d-none d-lg-block">
