--- a/themes/WebStack-Hugo/layouts/partials/footer.html
+++ b/themes/WebStack-Hugo/layouts/partials/footer.html
@@ -29,7 +29,7 @@ var theme = {"ajaxurl":"","addico":"https:\/\/nav.baidu.cn\/wp-content\/themes\/
         }, 600);
     });
 </script>
-<script>        
+<script>
     $(document).ready(function(){
         setTimeout(function () {
             if ($('a.smooth[href="' + window.location.hash + '"]')[0]) {
@@ -71,7 +71,7 @@ var theme = {"ajaxurl":"","addico":"https:\/\/nav.baidu.cn\/wp-content\/themes\/
             else
                 $(this).parents('.d-flex.flex-fill.flex-tab').children('.btn-move.tab-move').hide();
         });
-        
+
     });
 </script>
 
@@ -123,7 +123,7 @@ function switchNightMode(){
     }
 }
 </script>
-<script>
+<!-- <script>
 //网站运行时长
 var BootDate = new Date("2024/3/14 23:00:00");//设置网站运行时间，格式：年/月/日 时:分:秒
 function ShowRunTime(id) {
@@ -137,7 +137,7 @@ var RunTime = RunDays + "天" + RunHours + "时" + RunMinutes + "分" + RunSecon
 document.getElementById(id).innerHTML = "sunshine是真的菜：" + RunTime;
 }
 setInterval("ShowRunTime('RunTime')", 1000);
-</script>
+</script> -->
 <script>
      // 弹窗效果
    // const Toast = Swal.mixin({
