--- a/themes/WebStack-Hugo/layouts/partials/header.html
+++ b/themes/WebStack-Hugo/layouts/partials/header.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="{{ relURL "assets/js/jquery.min-3.2.1.js" }}" id="jquery-js"></script>
     <script type="text/javascript" src="{{ relURL "assets/js/content-search.js" }}"  id="content-search-js"></script>
     <!-- 百度统计 -->
-    <script>
+    <!-- <script>
         {{ with .Site.Params.seo.baiduhmid }}
         var _hmt = _hmt || []
             (function () {
@@ -41,13 +41,13 @@
                 s.parentNode.insertBefore(hm, s)
             })()
         {{ end }}
-    </script>
+    </script> -->
     <!-- end 百度统计 -->
     <!-- 51.LA 网站统计 -->
-    {{ with .Site.Params.seo.tj51laid }}
+    <!-- {{ with .Site.Params.seo.tj51laid }}
     <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id:"{{ $.Site.Params.seo.tj51laid }}",ck:"{{ $.Site.Params.seo.tj51lack }}"})</script>    
-    {{ end }} 
+    <script>LA.init({id:"{{ $.Site.Params.seo.tj51laid }}",ck:"{{ $.Site.Params.seo.tj51lack }}"})</script>
+    {{ end }} -->
     <!-- end 51.LA 网站统计 -->
     <!-- 鼠标样式 -->
     <style>
