--- a/themes/WebStack-Hugo/layouts/partials/content_header.html
+++ b/themes/WebStack-Hugo/layouts/partials/content_header.html
@@ -82,7 +82,7 @@
                                 src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
                         </div> -->
                         <!-- 一言 -->
-                        {{ with .Site.Params.yiyan }}
+                        <!-- {{ with .Site.Params.yiyan }}
                         <li class="nav-item mr-3 mr-lg-0 d-none d-lg-block">
                             <script>
                                 fetch('https://v1.hitokoto.cn/?c=b')
@@ -96,7 +96,7 @@
                             </script>
                             <div id="hitokoto"><a href="#" target="_blank" id="hitokoto_text">你似乎一直在寻找我。</a></div>
                         </li>
-                        {{ end }}
+                        {{ end }} -->
                         <!-- 一言 end -->
                         <li class="nav-search ml-3 ml-md-4">
                             <a href="javascript:" data-toggle="modal" data-target="#search-modal"><i
