--- a/themes/WebStack-Hugo/layouts/index.html
+++ b/themes/WebStack-Hugo/layouts/index.html
@@ -13,3 +13,7 @@
 {{ partial "modal_search.html" . }}
 
 {{ partial "footer.html" . }}
+
+{{ if site.Config.Services.GoogleAnalytics.ID }}
+    {{ template "_internal/google_analytics.html" . }}
+{{ end }}
