--- a/themes/WebStack-Hugo/layouts/partials/header.html
+++ b/themes/WebStack-Hugo/layouts/partials/header.html
@@ -40,4 +40,13 @@
             cursor: url("{{ relURL "https://cdn.jsdelivr.net/gh/i-kirito/halo-theme-xazz/templates/assets//plugins/cursor/simple/default.cur" }}"), auto;
         }
     </style>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id={{Site.services.googleAnalytics}}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{Site.services.googleAnalytics}}');
+</script>
 </head>
