--- a/themes/WebStack-Hugo/layouts/partials/header.html
+++ b/themes/WebStack-Hugo/layouts/partials/header.html
@@ -41,12 +41,12 @@
         }
     </style>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id={{Site.services.googleAnalytics}}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.Config.Services.GoogleAnalytics.ID }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{Site.services.googleAnalytics}}');
+  gtag('config', '{{ site.Config.Services.GoogleAnalytics.ID }}');
 </script>
 </head>
