--- a/themes/WebStack-Hugo/layouts/partials/header.html
+++ b/themes/WebStack-Hugo/layouts/partials/header.html
@@ -41,12 +41,13 @@
         }
     </style>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.Config.Services.GoogleAnalytics.ID }}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z57E0L2R8Z"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.Config.Services.GoogleAnalytics.ID }}');
+  gtag('config', 'G-Z57E0L2R8Z');
 </script>
 </head>
