--- a/themes/WebStack-Hugo/layouts/partials/header.html
+++ b/themes/WebStack-Hugo/layouts/partials/header.html
@@ -33,7 +33,15 @@
 
     <!-- Google AdSense -->
     {{ if .Site.Params.seo.GoogleAdsClient }}
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client={{ $.Site.Params.seo.GoogleAdsClient }}" crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{.Site.Params.seo.GoogleAdsClient}}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', '{{.Site.Params.seo.GoogleAdsClient}}');
+        </script>
     {{ end }}
     <!-- end Google AdSense -->
 
