--- a/themes/WebStack-Hugo/layouts/partials/sidebar.html
+++ b/themes/WebStack-Hugo/layouts/partials/sidebar.html
@@ -18,7 +18,7 @@
                 font-family: helvetica, arial, sans-serif;
                 text-transform: uppercase;
                 font-weight: 900;
-                color: #f1404b;
+                color: #00a96e;
                 letter-spacing: 0.2em
             }
 
@@ -28,7 +28,7 @@
                 display: block;
                 width: 15px;
                 height: 15px;
-                background: #f1404b;
+                background: #00a96e;
                 position: absolute;
                 animation: load .7s infinite alternate ease-in-out
             }
