--- a/themes/WebStack-Hugo/layouts/partials/modal_search.html
+++ b/themes/WebStack-Hugo/layouts/partials/modal_search.html
@@ -17,19 +17,19 @@
                         </div>
                         <div class="search-group group-a"><span class="type-text text-muted">常用</span>
                             <ul class="search-type">
-                                <li><input checked="checked" hidden="" type="radio" name="type2" 
+                                <li><input checked="checked" hidden="" type="radio" name="type2"
                                     id="m_type-baidu" value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道">
                                     <label for="m_type-baidu"><span class="text-muted">百度</span></label></li>
 				<li><input hidden="" type="radio" name="type2"
                                     id="m_type-bing" value="https://cn.bing.com/search?q=" data-placeholder="微软必应搜索">
                                     <label for="m_type-bing"><span class="text-muted">必应</span></label></li>
-                                <li><input hidden="" type="radio" name="type2" 
+                                <li><input hidden="" type="radio" name="type2"
                                     id="m_type-google" value="https://www.google.com/search?q=" data-placeholder="谷歌搜索">
                                     <label for="m_type-google"><span class="text-muted">谷歌</span></label></li>
-                                <li><input hidden="" type="radio" name="type2" 
+                                <li><input hidden="" type="radio" name="type2"
                                     id="m_type-filecr" value="https://filecr.com/search?query=" data-placeholder="Filecr 破解软件搜索">
                                     <label for="m_type-filecr"><span class="text-muted">软件</span></label></li>
-                                <li><input hidden="" type="radio" name="type2" 
+                                <li><input hidden="" type="radio" name="type2"
                                     id="m_type-pubmed" value="https://pubmed.ncbi.nlm.nih.gov/?term=" data-placeholder="PubMed 搜索/文章标题/关键字">
                                     <label for="m_type-pubmed"><span class="text-muted">文献</span></label></li>
                             </ul>
@@ -62,13 +62,13 @@
                                         value="https://www.itdog.cn/http/" data-placeholder="请输入网址(不带 https://)"><label
                                         for="m_type-speed"><span class="text-muted">测速检测</span></label></li>
                                 <li><input hidden="" type="radio" name="type2" id="m_type-br"
-                                        value="https://rank.chinaz.com/all/" data-placeholder="请输入网址(不带 https://)"><label 
+                                        value="https://rank.chinaz.com/all/" data-placeholder="请输入网址(不带 https://)"><label
                                         for="m_type-br"><span class="text-muted">权重查询</span></label></li>
                                 <li><input hidden="" type="radio" name="type2" id="m_type-links"
                                         value="https://link.chinaz.com/" data-placeholder="请输入网址(不带 https://)"><label
                                         for="m_type-links"><span class="text-muted">友链检测</span></label></li>
                                 <li><input hidden="" type="radio" name="type2" id="m_type-404"
-                                        value="https://tool.chinaz.com/Links/?DAddress=" data-placeholder="请输入网址(不带 https://)"><label 
+                                        value="https://tool.chinaz.com/Links/?DAddress=" data-placeholder="请输入网址(不带 https://)"><label
                                         for="m_type-404"><span class="text-muted">死链检测</span></label></li>
                             </ul>
                         </div>
@@ -141,7 +141,7 @@
                 </div>
 
                 <!--div class="px-1 mb-3">
-                    <i class="text-xl iconfont icon-hot mr-1" style="color:#f1404b;"></i>
+                    <i class="text-xl iconfont icon-hot mr-1" style="color:#00a96e;"></i>
                     <span class="h6">热门推荐： </span>
                 </div>
                 <div class="mb-3">
