--- a/themes/WebStack-Hugo/static/assets/css/custom-style-bak.0.1.css
+++ b/themes/WebStack-Hugo/static/assets/css/custom-style-bak.0.1.css
@@ -12,7 +12,7 @@ body,html{font-size:15px;}
 .big-header-banner .page-header{color:#6c757d;background:rgba(255,255,255,0);box-shadow:none;transition:color .3s,background-color .3s}
 .big-header-banner:not(.header-bg) .page-header .navbar-nav>li>a,.big-header-banner:not(.header-bg) .navbar-menu a:not(.dropdown-item){color:#6c757d;}
 .big-header-banner:not(.header-bg) .header-mini-btn path{stroke:#6c757d;}
-.big-header-banner:not(.header-bg) .page-header .navbar-nav>li>a:hover,.big-header-banner:not(.header-bg) .navbar-menu a:not(.dropdown-item):hover{color:#dc3545;}
+.big-header-banner:not(.header-bg) .page-header .navbar-nav>li>a:hover,.big-header-banner:not(.header-bg) .navbar-menu a:not(.dropdown-item):hover{color:#59b291;}
 .big-header-banner:not(.header-bg) .header-mini-btn label:hover path{stroke:#6c757d;}
 /*主页导航栏字体颜色 -- end*/
 /*搜索activate图标颜色 -- start*/
@@ -84,7 +84,7 @@ footer.main-footer .footer-text a {
     color: #007bff;
 }
 footer.main-footer .footer-text a:hover {
-    color: red;
+    color: #59b291;
 }
 
 /* About 页面 */
